--- a/javascript/ifelse_operadores_logicos.html
+++ b/javascript/ifelse_operadores_logicos.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Operadores Logicos</title>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Operadores Logicos</title>
 
-	<script type="text/javascript">
-		
-		if (2 == 2 && 3 >= 5) {
-			document.write('Verdadeiro')
+		<script type="text/javascript">
+			//entrada de dados
 
-		} 
-		else {
-			document.write('Falso')
+			var idade  = prompt('digite a sua idade')
 
-		}
+			//processamento
+			if (idade  >= 0 && < 15) {
+				document.write('Criança ')
+			} 
+			
+			if (idade  >= 15 && < 30) {
+				document.write('Jovem ')
+			} 
+			
+			if (idade  >= 30 && < 60) {
+				document.write('Adulto ')
+			} 
+			if {
+				document.write('Idoso ')
+			}
+				
 
 
 
-	</script>
+		</script>
 
 
 
-</head>
-<body>
+	</head>
+	<body>
 
-</body>
+	</body>
 </html>
